ingress-cross-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: trading
    meta.helm.sh/release-namespace: test-front-tts
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/managed-by: Helm
  name: trading
  namespace: test-front-tts
spec:
  rules:
  - host: test-trade.xaniis.com
    http:
      paths:
      - backend:
          service:
            name: trading
            port:
              number: 80
        path: /()(.*)
        pathType: Prefix
      - backend:
          service:
            name: tse-tp-svc-bridge
            port:
              number: 80
        path: /tse-api(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: base-tp-svc-bridge
            port:
              number: 80
        path: /base-api(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: market-svc-bridge
            port:
              number: 80
        path: /market-api(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - test-trade.xaniis.com
    secretName: test-trade-xaniis-com-tls

---
---
apiVersion: v1
kind: Service
metadata:
  name: tse-tp-svc-bridge
  namespace: test-front-tts
spec:
  type: ExternalName
  externalName: tse-tp-gateway.stg-front-middleware.svc.k8s.po.xanis.cloud
---
apiVersion: v1
kind: Service
metadata:
  name: base-tp-svc-bridge
  namespace: test-front-tts
spec:
  type: ExternalName
  externalName: base-tp-gateway.stg-front-middleware.svc.k8s.po.xanis.cloud
---
apiVersion: v1
kind: Service
metadata:
  name: market-svc-bridge
  namespace: test-front-tts
spec:
  type: ExternalName
  externalName: market-tp-gateway.stg-front-middleware.svc.k8s.po.xanis.cloud
